--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,30 @@
-async-generator==1.10
-attrs==21.2.0
+cachetools==4.2.4
 certifi==2021.10.8
-cffi==1.15.0
-cryptography==35.0.0
-h11==0.12.0
+charset-normalizer==2.0.7
+docutils==0.18
+google-api-core==2.2.2
+google-api-python-client==2.31.0
+google-auth==2.3.3
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.6
+googleapis-common-protos==1.53.0
+httplib2==0.20.2
 idna==3.3
+Kivy==2.0.0
+Kivy-Garden==0.1.4
 numpy==1.21.4
-outcome==1.1.0
+oauthlib==3.1.1
 pandas==1.3.4
-pycparser==2.21
-pyOpenSSL==21.0.0
+protobuf==3.19.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.10.0
+pyparsing==3.0.6
 python-dateutil==2.8.2
 pytz==2021.3
-selenium==4.0.0
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
 six==1.16.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-tqdm==4.62.3
-trio==0.19.0
-trio-websocket==0.9.2
+uritemplate==4.1.1
 urllib3==1.26.7
-wsproto==1.0.0
